new proj/src/objects/GE_PRM_Customer__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_PRM_Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account plan name  linked to this  section</inlineHelpText>
        <label>Account Plan</label>
        <referenceTo>GE_HQ_Account_Plan__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Current_Status_Actions__c</fullName>
        <inlineHelpText>For all existing/new customers or consultants, what are the current/future actions planned to achieve the target (contacts/meetings, presentations, evaluating products, events…) ?</inlineHelpText>
        <label>Current Status/ Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Current_Year_Potential__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>For an existing customer only, what is the potential of volume achievable with this existing customer for this year ?</inlineHelpText>
        <label>CY Potential $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Current_Year_Target_Sales__c</fullName>
        <inlineHelpText>What is the target assigned to customer/consultant for this year ?</inlineHelpText>
        <label>CY $ Target Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Customer_Type_Details__c</fullName>
        <inlineHelpText>For New/Existing Customer, what is the typology of this customer ?</inlineHelpText>
        <label>Customer Type Details</label>
        <picklist>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Growth_Initiatives_Actions__c</fullName>
        <label>Growth Initiatives/Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Growth_VP__c</fullName>
        <formula>IF(GE_PRM_Previous_Year_Volume__c &gt; 0, ( GE_PRM_Current_Year_Target_Sales__c / GE_PRM_Previous_Year_Volume__c )-1 , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For an existing customer/consultant only, what is the % Growth expected this year. Calculated automatically: % Growth (V%)= (CY $ Target Orders /PY Volume $) - 1</inlineHelpText>
        <label>% Growth (V%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Growth_V__c</fullName>
        <label>% Growth (V%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Lunch_Learns__c</fullName>
        <inlineHelpText>How many Lunch/Learns is the channel partner planned to organize with the customer/consultant for this year ?</inlineHelpText>
        <label># Lunch &amp; Learns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Planned_Visits__c</fullName>
        <inlineHelpText>How many visits the channel partner planned to organized with the customer/consultant for this year ?</inlineHelpText>
        <label>Planned # Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Previous_Year_Volume__c</fullName>
        <inlineHelpText>For an existing customer/consultant only, what is the volume achieved by this existing customer/consultant last year ?</inlineHelpText>
        <label>PY Volume $ (Only for Existing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Type__c</fullName>
        <inlineHelpText>Type of cutomer: Is it a New Targeted Customers/ an Existing Customers/ a Top consultants ?</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Targeted Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Consultant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Type_of_Customer__c</fullName>
        <label>Type  of Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Type_of_Relationship__c</fullName>
        <inlineHelpText>What is the level of relationship with the customer/consultant ?  Strong/Medium/Weak/No relationship ?</inlineHelpText>
        <label>Type of Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Strong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Relationship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Vertical_Industry__c</fullName>
        <inlineHelpText>What is the Vertical industry the customer/consultant serve or has expertise in ?</inlineHelpText>
        <label>Vertical Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Cement and Building Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data &amp; Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment &amp; Appliances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvesting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metals Productions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Petrochemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulp, Paper, Wood and Textiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transmission &amp; Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water and Wastewater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unconventional fuels (e.g. Heavy Oil)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Customer</label>
    <nameField>
        <label>Customer/Consultant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <recordTypes>
        <fullName>GE_PRM_End_User</fullName>
        <active>true</active>
        <label>End User</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Plan_Is_Approved</fullName>
        <active>true</active>
        <description>If Account Plan is &apos;Approved&apos; user shouldn&apos;t be able to create or edit Customer</description>
        <errorConditionFormula>AND(AND( $Profile.Name &lt;&gt; &apos;GE_ES System Administrator&apos;, $Profile.Name &lt;&gt; &apos;System Administrator&apos;) ,ISPICKVAL( GE_PRM_Account_Plan__r.GE_PRM_Status__c , &apos;Approved&apos;))</errorConditionFormula>
        <errorMessage>You cannot create/edit Customer since Account Plan is Approved</errorMessage>
    </validationRules>
</CustomObject>